fix top gap for AccountSidebar with scrollbar

--- a/jsapp/js/account/accountSidebar.module.scss
+++ b/jsapp/js/account/accountSidebar.module.scss
@@ -1,8 +1,7 @@
 @use 'scss/colors';
 
 .accountSidebar {
-  margin-top: 10px;
-  padding: 14px 20px 20px 0;
+  padding: 24px 20px 20px 0;
   overflow-y: auto;
   overflow-x: hidden;
   flex: 1;
